# kubilitics-os-emergent

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TASKS.md  TASKS_ENTERPRISE_GRADE.md  docker-compose.test.yml  test-pod.yaml  test_ws.js
.emergent/: emergent.yml  summary.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
Kubilitics-logo/: info.txt
docs/: ARCHITECTURE.md  AUDIT-LOGGING.md  DESKTOP-OFFLINE.md  DESKTOP-SECURITY.md  DESKTOP-SIDECAR.md  DISTRIBUTION.md  ERROR-STATES.md  INTEGRATION-MODEL.md  ISOLATION-MODEL.md  MOBILE-SCOPE.md  OBSERVABILITY.md  PHASE1_COMPLETION_REPORT.md  PRE-PUSH-AND-LIVE-E2E.md  RELEASE-PROCESS.md  RETENTION.md  SCALE-AND-SECURITY.md  SECURE-DEFAULTS.md  SECURITY-RBAC.md  SECURITY-SECRETS.md  SSO-DESIGN.md  TOPOLOGY-API-CONTRACT.md
frontend/: .env
kcli/: README.md  go.mod  go.sum  pricing.json
kcli-sdk/: go.mod  plugin.go  plugin_test.go
kubilitics-ai/: .golangci.yml  AI-IMPLEMENTATION-TASKS.md  BYO-LLM-ARCHITECTURE.md  Dockerfile  Makefile  README.md  VISION-ALIGNMENT-AND-IMPLEMENTATION-GUIDE.md  config.example.yaml  config.yaml  go.mod  go.sum
kubilitics-backend/: .gitignore  .golangci.yml  API_DOCUMENTATION.md  Dockerfile  README.md  go.mod  go.sum  output.txt  reproduce_issue.go  test_norm.go  test_output.txt
kubilitics-desktop/: Cargo.toml  README.md  package-lock.json  package.json
kubilitics-desktop/src-tauri/: .gitignore  Cargo.toml  kubilitics.key.pub  tauri.conf.json
kubilitics-desktop/src-tauri/capabilities/: default.json
kubilitics-desktop/src-tauri/icons/: icon.icns
kubilitics-desktop/src-tauri/src/: backend_ports.rs  commands.rs  main.rs  menu.rs  sidecar.rs  tray.rs
kubilitics-frontend/: .gitignore  Dockerfile  README.md  a11y_output.txt  eslint.config.js  index.html  nginx.conf  nohup.out  package-lock.json  package.json  playwright.config.mjs  playwright.config.ts  tailwind.config.ts  take_screenshot.js  test_output.txt  tsconfig.app.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1770948102620-e010a9822003a.mjs
kubilitics-mobile/: Cargo.toml  README.md
kubilitics-mobile/src-tauri/src/: lib.rs
scripts/: dev.sh  (+18 more)
(+1441 files in other folders)
