[package]
name = "kubilitics-mobile"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = ["mobile"] }

[dependencies]
tauri = { version = "2.0", features = ["mobile"] }
tauri-plugin-shell = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(target_os = "ios")'.dependencies]
cocoa = "0.25"
objc = "0.2"
