[package]
name = "kubilitics-desktop"
version = "0.1.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-updater = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
